day-17/segunda-network-policy-2.0.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: segunda-policy
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
    ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
            - key kubernetes.io/metadata.name
            operator: In
            values: ["ingress-nginx", "giropops"]
